--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
           <ul style="margin-left: 40px">
             <li>Analysis on different types harmful content</li>
             <li>Computational fact-checking</li>
-            <li>Role of Generative Artificial Intelligence (AI) in Mitigating Harmful Content</li>
+            <li>Role of Generative AI in Mitigating Harmful Content</li>
             <li>Identifying Harassment/bullying/hate speech, misinformation/disinformation/</li>
             <li>Role of Explainable AI in Studying Harmful Content</li>
             <li>Multi-modal harmful content</li>
@@ -2207,7 +2207,7 @@
         </div>
         <div class="col-md-12 align-self-center">
           <!-- Section title -->
-          <div class="card-deck">
+          <!--<div class="card-deck">
 
             <div class="col-md-2 align-self-center" style="padding: 5px; max-width: 12%;">
               <div class="category-block origanizers">
