--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://gautamshahi.github.io/">Gautam<br> Kishore Shahi</a></h5>
+                        <h5 class="text-center"><a href="https://gautamshahi.github.io/">Gautam Kishore Shahi</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
@@ -1314,7 +1314,7 @@
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://www.uni-hildesheim.de/fb3/institute/iwist/mitglieder/mandl/">Thomas<br> Mandl</a></h5>
+                        <h5 class="text-center"><a href="https://www.uni-hildesheim.de/fb3/institute/iwist/mitglieder/mandl/">Thomas Mandl</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
@@ -1340,7 +1340,7 @@
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://www.ecs.soton.ac.uk/people/hl2a22">Haiming <br> Liu</a></h5>
+                        <h5 class="text-center"><a href="https://www.ecs.soton.ac.uk/people/hl2a22">Haiming Liu</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
@@ -1360,14 +1360,14 @@
                   <tbody align="center">
                     <tr height="200px">
                       <td>
-                        <div class="img_wap"><img src="./res/person/amit.jpg" alt="" class="rounded-circle"
+                        <div class="img_wap"><img src="./res/person/AMIT.jpg" alt="" class="rounded-circle"
                             width="60%">
                         </div>
                       </td>
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://amitkumarj441.github.io">Amit<br> Kumar Jaiswal</a></h5>
+                        <h5 class="text-center"><a href="https://amitkumarj441.github.io">Amit Kumar Jaiswal</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
@@ -1394,7 +1394,7 @@
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://www.southampton.ac.uk/people/5xfhk2/doctor-luis-daniel-ibanez">Luis-Daniel <br>Ibáñez</a></h5>
+                        <h5 class="text-center"><a href="https://www.southampton.ac.uk/people/5xfhk2/doctor-luis-daniel-ibanez">Luis-Daniel Ibáñez</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
@@ -1421,7 +1421,7 @@
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="#">Durgesh <br>Nandini</a></h5>
+                        <h5 class="text-center"><a href="#">Durgesh Nandini</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
