--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- saved from url=(0044)http://www.gigavision.cn/ACMMM2021_main.html -->
 <html lang="en">
 
 <head>
@@ -766,11 +765,11 @@
               <ul class="navbar-nav ml-auto main-nav">
                 <li class="nav-item active"> <a class="nav-link" href="#overview">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link " href="#dates">Dates</a> </li>
+                <li class="nav-item"> <a class="nav-link " href="#call">Call for Papers</a> </li>
                 <li class="nav-item"> <a class="nav-link " href="#speakers">Speakers</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
-                <li class="nav-item"> <a class="nav-link " href="#call">Submissions</a> </li>
                 <!-- <li class="nav-item"> <a class="nav-link" href="#challenge">Challenge</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#sponsors">Sponsors</a> </li> -->
+                <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#committee">Committee</a> </li>
               </ul>
             </div>
@@ -807,17 +806,18 @@
             It leads to harmful content spreaders switching platforms and languages to reach the user base.
             Harmful is not limited to social media but also news media. Spreader shares harmful content in posts,
             news articles, comments, and hyperlinks. So, there is a need to study the harmful content by combining cross-platform,
-            language and topics.</p>
+            language, multimodal data and topics.</p>
           <p> We will bring the research on harmful content under one umbrella so that research on different topics (hate speech, misinformation,
             disinformation, self-harm, offensive content, etc.) can bring some novel methods
-            and recommendations for users. The workshop will cover the ongoing issue of war or elections in 2024.
-            Our workshop on DOHW: Diffusion of Harmful Content on Online Web, which brings
-            together the research on different topics of harmful content.</p>
+            and recommendations for users, leveraging text analysis with image, audio, and video recognition 
+            to detect harmful content in diverse formats. The workshop will cover the ongoing issue of war or elections in 2024.
+            </p>
           <p>We believe this workshop will provide a unique opportunity for researchers and practitioners to exchange
             ideas, share latest developments, and collaborate on addressing the challenges associated with
             harmful contents spread across the Web. We expect that the workshop will generate insights and
             discussions that will help advance the field of societal artificial intelligence (AI) for the
-            development of safer internet.</p>
+            development of safer internet. In addition to attracting high quality research contributions to the workshop, 
+            one of the aims of the workshop is to mobilise the researchers working on the related areas to form a community. </p>
 
           <!-- <strong>
             <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2024 (AoE).
@@ -843,7 +843,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="section-title">
-            <h2 id="dates">Tentative Important Dates</h2>
+            <h2 id="dates">Key Dates</h2>
           </div>
           <p align="center">
             <img src="./res/dates-24.png" width="90%">
@@ -1027,8 +1027,9 @@
         <div class="col-12">
           <!-- Section title -->
           <div class="section-title">
-            <h2 id="speakers">Proposed Speakers</h2>
+            <h2 id="speakers">Keynote Talks</h2>
           </div>
+          TBD
           <div class="card-deck">
 
             <!-- Organizers list -->
@@ -1279,7 +1280,7 @@
                   <tbody align="center">
                     <tr height="200px">
                       <td>
-                        <!-- 图片保证纵横比 -->
+                        <!-- -->
                         <div class="img_wap"><img src="./res/person/gautam.png" alt="" class="rounded-circle"
                             width="100%">
                         </div>
@@ -1679,7 +1680,7 @@
             <li>Analysis on different types harmful content</li>
             <li>Computational fact-checking</li>
             <li>Role of Generative AI in Mitigating Harmful Content</li>
-            <li>Identifying Harassment/bullying/hate speech, misinformation/disinformation/</li>
+            <li>Identifying harassment/bullying/hate speech, and misinformation/disinformation </li>
             <li>Role of Explainable AI in Studying Harmful Content</li>
             <li>Multi-modal harmful content</li>
             <li>Deepfake and its influence</li>
@@ -1692,18 +1693,24 @@
             visit the submission site!</a>
 
           <!-- <strong>Format</strong>: Submitted papers (.pdf format) must use the ACM Article Template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a>. Please remember to add Concepts and Keywords.<br> -->
-          <strong>Format</strong>: Submissions papers (.pdf format) must use the <a
+          <strong>Submission Guidelines</strong>: All submissions must be formatted in PDF following the ACM SIG Conference Proceedings Template in double-column version 
+          (check <a href="ceur" style="color:blue;">WebSci 2024 submission formatting instructions</a>). 
+          Submissions are limited to 6-10 content pages for full paper and up to 5 content pages for short paper, including all figures, tables, references and appendices.  
+          All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
+          Accepted papers will be presented at the workshop and will be published in the companion (workshop) proceedings of ACM WebSci 2024.
+          
+          <!-- Submissions papers (.pdf format) must use the <a
             href="ceur" style="color:blue;">CEUR Format
             for LaTeX/Word Zip file</a> and be anonymized and follow WebSci 2024 author instructions. The workshop considers two types of
           submissions: (1) Long Paper: Papers are limited to <strong>14</strong> pages excluding references; (2) Short
-          Papers: Papers are limited to <strong>6</strong> pages including references.
+          Papers: Papers are limited to <strong>6</strong> pages including references. -->
           <br><br>
           <!-- <strong>Length</strong>: As stated in the CfP, submitted papers may be <strong>6</strong> to <strong>8</strong> pages. Up to two additional pages may be added for references. The reference pages must only contain references. Overlength papers will be rejected without review.<br> -->
           <strong>Submission Site</strong>:
           <a href="https://easychair.com/dhow"
             style="color:blue;" target="_blank">https://easychair.com/dhow</a>
           <br>
-          <strong>Submission Due</strong>: <strong> March 15, 2024, Anywhere on Earth (AoE)<strong>
+          <strong>Submission Due</strong>: <strong> March 22, 2024, Anywhere on Earth (AoE)<strong>
         </div>
       </div>
     </div>
