--- a/index.html
+++ b/index.html
@@ -1030,14 +1030,9 @@
           <div class="section-title">
             <h2 id="call">Call for Papers</h2>
           </div>
-          With the advancement of technologies and tools, harmful content is proliferating at a concerning rate.
-          Users are required to identify emerging types of harmful content other than the text,
-          such as manipulated images and videos. Multiple approaches have been applied for studying the harmful content,
-          but there is still a huge research gap. Undoubtedly, this effort requires a multidisciplinary approach
-          where academics, researchers, physiological experts, cognitive scientists, journalists, and other types
-          of domain experts' critical thoughts are collectively important to contribute. In this workshop,
-          we aim to bring together a multidisciplinary, diverse team of researchers, journalists and stakeholders.
-          We welcome research contributions related to the following (but
+          In this workshop, we aim to bring together a multidisciplinary, diverse team of researchers, journalists and stakeholders by focusing on the broader topic
+          harmful content.
+         We welcome research contributions related to the following (but
           not limited to) topics:<br>
 
           <ul style="margin-left: 40px">
