--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@
 
   </section>
 
-  <!--==========================================
+ <!--==========================================
     =            Organizers Section            =
     ===========================================-->
 
@@ -1326,14 +1326,27 @@
       <div class="row">
 
         <div class="col-md-12 align-self-center">
+          <div class="category-block origanizers">
           <!-- Section title -->
           <div class="section-title">
             <h2 id="people">Organizers</h2>
           </div>
           <div class="card-deck">
 
+          <div class="col-md-2 align-self-center">
+              <ul>      
+                <li>Thomas Mandl, University of Hildesheim, Germany</li>
+                <li>Haiming Liu, University of Southampton, UK</li>
+                <li>Gautam Kumar Shahi, University of Duisburg-Essen, Germany</li>
+                <li>Amit Kumar Jaiswal, University of Surrey, UK</li>
+                <li>Luis-Daniel Ibáñez, University of Southampton, UK</li>
+                <li>Durgesh Nandini, University of Bayreuth, Germany</li>
+              </ul>
+            </div>
+          </div>
+          </div>
             <!-- Organizers list -->
-            <div class="col-md-2 align-self-center">
+<!--            <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
                 <table width="100%" border="0" align="center">
                   <tbody align="center">
@@ -1358,10 +1371,10 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
 
             <!-- Organizers list -->
-            <div class="col-md-2 align-self-center">
+   <!--         <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
                 <table width="100%" border="0" align="center">
                   <tbody align="center">
@@ -1385,10 +1398,10 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
 
             <!-- Organizers list -->
-            <div class="col-md-2 align-self-center">
+    <!--        <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
                 <table width="100%" border="0" align="center">
                   <tbody align="center">
@@ -1411,10 +1424,10 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
 
             <!-- Organizers list -->
-            <div class="col-md-2 align-self-center">
+<!--            <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
                 <table width="100%" border="0" align="center">
                   <tbody align="center">
@@ -1438,10 +1451,10 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
 
             <!-- Organizers list -->
-            <div class="col-md-2 align-self-center">
+      <!--      <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
                 <table width="100%" border="0" align="center">
                   <tbody align="center">
@@ -1465,10 +1478,10 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
 
             <!-- Organizers list -->
-            <div class="col-md-2 align-self-center">
+       <!--     <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
                 <table width="100%" border="0" align="center">
                   <tbody align="center">
@@ -1492,7 +1505,7 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
 
             <!-- <div class="col-md-2 align-self-center">
               <div class="category-block origanizers">
