--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-md-12 align-self-center">
+        <div class="col-12 align-self-center">
           <div class="category-block origanizers">
           <!-- Section title -->
           <div class="section-title">
@@ -1333,8 +1333,8 @@
           </div>
           <div class="card-deck">
 
-          <div class="col-md-2 align-self-center">
-              <ul>      
+          <div class="col-12 align-self-center">
+              <ul style="margin-left: 40px">      
                 <li>Thomas Mandl, University of Hildesheim, Germany</li>
                 <li>Haiming Liu, University of Southampton, UK</li>
                 <li>Gautam Kumar Shahi, University of Duisburg-Essen, Germany</li>
@@ -1352,7 +1352,7 @@
                   <tbody align="center">
                     <tr height="200px">
                       <td>
-                        <!-- -->
+                        
                         <div class="img_wap"><img src="./res/person/gautam.png" alt="" class="rounded-circle"
                             width="100%">
                         </div>
