--- a/index.html
+++ b/index.html
@@ -1054,16 +1054,16 @@
           <!-- <strong>Format</strong>: Submitted papers (.pdf format) must use the ACM Article Template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a>. Please remember to add Concepts and Keywords.<br> -->
           <strong>Submission Guidelines</strong>:  
           Submissions must be written in English, in double-column format, and must adhere to the <a href="https://www.acm.org/publications/proceedings-template" style="color:blue;">ACM template and format</a>) (also available in <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty" style="color:blue;">Overleaf</a>). Word users may use the Word Interim Template. The recommended setting for LaTeX is:
-          <br>
-          \documentclass\\sigconf, review\\{acmart}.
-          <br>
+          <p>
+          <code>\documentclass\\sigconf, review\\{acmart}.<\code>
+          <\p>
           Submission must be as a single PDF file: limited to 6-10 content pages for full paper and up to 5 content pages for short paper, including all figures, tables, references, and appendices.  
           <br>
-          Submission Site. Submissions must be made through the EasyChair system at https://easychair.org/conferences/?conf=thewebconf2024 (select the Resource track).
+          Submission Site. Submissions must be made through the EasyChair system at https://easychair.org/conferences/?conf=dhow2024 .
+          <be>
+          <b>Authorship.<\b> Submissions are not anonymous, hence authors should list their names and affiliations.
           <br>
-          Authorship. Submissions are not anonymous, hence authors should list their names and affiliations.
-          <br>
-          Reviewing. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
+          <b>Reviewing.<\b> Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
           <br>        
           
           All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
