--- a/index.html
+++ b/index.html
@@ -1054,8 +1054,8 @@
           <!-- <strong>Format</strong>: Submitted papers (.pdf format) must use the ACM Article Template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a>. Please remember to add Concepts and Keywords.<br> -->
           <strong>Submission Guidelines</strong>:  
           Submissions must be written in English, in double-column format, and must adhere to the <a href="https://www.acm.org/publications/proceedings-template" style="color:blue;">ACM template and format</a>) (also available in <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty" style="color:blue;">Overleaf</a>). Word users may use the Word Interim Template. The recommended setting for LaTeX is:
-          <p>
-          <code>\documentclass\\sigconf, review\\{acmart}.<\code>
+          <p style="color:blue;">
+          \documentclass\\sigconf, review\\{acmart}.
           <\p>
           Submission must be as a single PDF file: limited to 6-10 content pages for full paper and up to 5 content pages for short paper, including all figures, tables, references, and appendices.  
           <br>
@@ -1100,7 +1100,7 @@
           <div class="section-title">
             <h2 id="speakers">Keynote Talks</h2>
           </div>
-          TBD
+          <p align="center"> TBD </p>
           <div class="card-deck">
 
             <!-- Organizers list -->
@@ -2233,6 +2233,7 @@
           <div class="section-title">
             <h2 id="committee">Program Committee</h2>
           </div>
+            <p align="center"> TBD </p>
         </div>
         <div class="col-md-12 align-self-center">
           <!-- Section title -->
