--- a/index.html
+++ b/index.html
@@ -1053,15 +1053,17 @@
 
           <!-- <strong>Format</strong>: Submitted papers (.pdf format) must use the ACM Article Template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a>. Please remember to add Concepts and Keywords.<br> -->
           <strong>Submission Guidelines</strong>:  
-          Submissions must be written in English, in double-column format, and must adhere to the <a href="https://www.acm.org/publications/proceedings-template" style="color:blue;">ACM template and format</a>) (also available in <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty" style="color:blue;">Overleaf</a>). Word users may use the Word Interim Template. The recommended setting for LaTeX is:
+          Submissions must be written in English, in double-column format, and must adhere to the (<a href="https://www.acm.org/publications/proceedings-template" style="color:blue;">ACM template and format</a>) (also available in <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty" style="color:blue;">Overleaf</a>). Word users may use the Word Interim Template. 
+          The recommended setting for LaTeX is:
           
+          <br>
           Submission must be as a single PDF file: limited to 6-10 content pages for full paper and up to 5 content pages for short paper, including all figures, tables, references, and appendices.  
           <br>
-          Submission Site. Submissions must be made through the EasyChair system at https://easychair.org/conferences/?conf=dhow2024 .
+          Submission Site. Submissions must be made through the EasyChair system at (<a href="https://easychair.org/conferences/?conf=dhow2024" style="color:blue;"> Submission Link</a>).
           <br>
-          <b>Authorship.<\b> Submissions are not anonymous, hence authors should list their names and affiliations.
+          Authorship. Submissions are <b>not</b> anonymous hence authors should list their names and affiliations.
           <br>
-          <b>Reviewing.<\b> Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
+          Reviewing. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
           <br>        
           
           All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
