--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
           <br><br>
           <!-- <strong>Length</strong>: As stated in the CfP, submitted papers may be <strong>6</strong> to <strong>8</strong> pages. Up to two additional pages may be added for references. The reference pages must only contain references. Overlength papers will be rejected without review.<br> -->
           <strong>Submission Site</strong>:
-          <a href="https://easychair.com/dhow"
+          <a href="https://easychair.org/conferences/?conf=dhow2024"
             style="color:blue;" target="_blank">https://easychair.com/dhow</a>
           <br>
           <strong>Submission Due</strong>: <strong> March 22, 2024, Anywhere on Earth (AoE)<strong>
