--- a/index.html
+++ b/index.html
@@ -1056,13 +1056,13 @@
           Submissions must be written in English, in double-column format, and must adhere to the (<a href="https://www.acm.org/publications/proceedings-template" style="color:blue;">ACM template and format</a>) (also available in <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty" style="color:blue;">Overleaf</a>). Word users may use the Word Interim Template. 
           The recommended setting for LaTeX is:
           <br>
-          \documentclass\\sigconf, review\\{acmart}.
+           <em> \documentclass\\sigconf, review\\{acmart}. </em>
           <br>
           Submission must be as a single PDF file: limited to 6-10 content pages for full paper and up to 5 content pages for short paper, including all figures, tables, references, and appendices.  
           <br>
-          <b>Submission Site</b>b>. Submissions must be made through the EasyChair system at <a href="https://easychair.org/conferences/?conf=dhow2024" style="color:blue;"> Submission Link</a>.
+          <b>Submission Site</b>. Submissions must be made through the EasyChair system at <a href="https://easychair.org/conferences/?conf=dhow2024" style="color:blue;"> Submission Link</a>.
           <br>
-          <b>Authorship</b>b>. Submissions are <b>not</b> anonymous hence authors should list their names and affiliations.
+          <b>Authorship</b>. Submissions are <b>not</b> anonymous hence authors should list their names and affiliations.
           <br>
           <b>Reviewing<b/>. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
           <br>        
@@ -1080,7 +1080,7 @@
           <!-- <strong>Length</strong>: As stated in the CfP, submitted papers may be <strong>6</strong> to <strong>8</strong> pages. Up to two additional pages may be added for references. The reference pages must only contain references. Overlength papers will be rejected without review.<br> -->
           <strong>Submission Site</strong>:
           <a href="https://easychair.org/conferences/?conf=dhow2024"
-            style="color:blue;" target="_blank">https://easychair.com/dhow</a>
+            style="color:blue;" target="_blank">https://easychair.org/conferences/?conf=dhow2024</a>
           <br>
           <strong>Submission Due</strong>: <strong> March 22, 2024, Anywhere on Earth (AoE)<strong>
         </div>
