--- a/index.html
+++ b/index.html
@@ -1064,12 +1064,12 @@
           <br>
           <b>Authorship</b>. Submissions are <b>not</b> anonymous hence authors should list their names and affiliations.
           <br>
-          <b>Reviewing<b/>. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
+          <b>Reviewing</b>>. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
           <br>        
           
-          <b>Presentation<b/>. All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
+          <b>Presentation</b>. All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
             <br>      
-          <b>Proceedings</b>b>. Accepted papers will be presented at the workshop and will be published in the companion (workshop) proceedings of ACM WebSci 2024.
+          <b>Proceedings</b>. Accepted papers will be presented at the workshop and will be published in the companion (workshop) proceedings of ACM WebSci 2024.
           
           <!-- Submissions papers (.pdf format) must use the <a
             href="ceur" style="color:blue;">CEUR Format
