--- a/index.html
+++ b/index.html
@@ -1058,13 +1058,14 @@
           <br>
            <em> \documentclass\\sigconf, review\\{acmart}. </em>
           <br>
-          Submission must be as a single PDF file: limited to 6-10 content pages for full paper and up to 5 content pages for short paper, including all figures, tables, references, and appendices.  
+          Submission must be as a single PDF file: limited to 6-10 content pages for <b>full paper</b> and up to 5 content pages for <b>short paper</b> and 2 pages for <b>poster</b> presentation including all figures, tables, references, and appendices. 
+          
           <br>
           <b>Submission Site</b>. Submissions must be made through the EasyChair system at <a href="https://easychair.org/conferences/?conf=dhow2024" style="color:blue;"> Submission Link</a>.
           <br>
           <b>Authorship</b>. Submissions are <b>not</b> anonymous hence authors should list their names and affiliations.
           <br>
-          <b>Reviewing</b>>. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
+          <b>Reviewing</b>. Submissions will be peer-reviewed by members of the Resource Committee based on originality, significance, quality, and clarity. The review process will be single-blind.
           <br>        
           
           <b>Presentation</b>. All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
