--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
           <br>
            <em> \documentclass\\sigconf, review\\{acmart}. </em>
           <br>
-          Submission must be as a single PDF file: limited to 6-10 content pages for <b>full paper</b> and up to 5 content pages for <b>short paper</b> and 2 pages for <b>poster</b> presentation including all figures, tables, references, and appendices. 
+          Submission must be as a single PDF file: limited to 6-10 content pages for <b>full paper</b>, up to 5 content pages for <b>short paper</b> and 2 pages for <b>poster</b> presentation including all figures, tables, references, and appendices. 
           
           <br>
         
