--- a/index.html
+++ b/index.html
@@ -1044,6 +1044,10 @@
             <li>Multi-modal harmful content</li>
             <li>Deepfake and its influence</li>
             <li>Multi-lingual harmful content like Hate speech, Fake News Bot, spam, troll detection</li>
+            <li>Both Qualitative and Quantitative study on harmful content</li>
+            <li>Psychological effects of harmful content like mental health</li>
+            <li>Approaches for data collection or data annotation using LLM on harmful content</li>
+            <li>User study on the effect of harmful content on human begins </li>
           </ul>
           <!-- <strong>
             <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2024 (AoE).
