--- a/index.html
+++ b/index.html
@@ -1105,29 +1105,29 @@
           <div class="section-title">
             <h2 id="speakers">Keynote Talks</h2>
           </div>
-          <p align="center"> TBD </p>
+          <!--<p align="center"> TBD </p>-->
           <div class="card-deck">
 
             <!-- Organizers list -->
-            <!--<div class="card thin1">
+            <div class="card thin1">
               <div class="category-block">
                 <table width="80%" border="0" align="center">
                   <tbody align="center">
                     <tr height="200px">
                       <td>
-                        <div class="img_wap"><img src="./res/person/bo_li.jpg" alt="" class="rounded-circle"
+                        <div class="img_wap"><img src="./res/person/stefano.png" alt="" class="rounded-circle"
                             width="60%">
                         </div>
                       </td>
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://aisecure.github.io/">Bo <br> Li</a></h5>
+                        <h5 class="text-center"><a href="https://stefanocresci.com">Stefano<br> Cresci</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p>University of Chicago                        </p>
+                        <p>Institute of Informatics and Telematics of the National Research Council (IIT-CNR), Pisa, Italy </p>
                       </td>
                     </tr>
                   </tbody>
@@ -1135,7 +1135,7 @@
               </div>
             </div>
 
-            <div class="card thin1">
+           <!-- <div class="card thin1">
               <div class="category-block">
                 <table width="80%" border="0" align="center">
                   <tbody align="center">
