--- a/index.html
+++ b/index.html
@@ -1116,13 +1116,13 @@
                     <tr height="20px">
                       <td>
                         <div class="img_wap"><img src="./res/person/stefano.png" alt="" class="rounded-circle"
-                            width="20%">
+                            width="30%">
                         </div>
                       </td>
                     </tr>
                     <tr height="20px">
                       <td>
-                        <h5 class="text-center"><a href="https://stefanocresci.com">Stefano<br> Cresci</a></h5>
+                        <h5 class="text-center"><a href="https://stefanocresci.com">Stefano Cresci</a></h5>
                       </td>
                     </tr>
                     <tr height="20px">
