--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
               <ul style="margin-left: 40px">      
                 <li>Thomas Mandl, University of Hildesheim, Germany</li>
                 <li>Haiming Liu, University of Southampton, UK</li>
-                <li>Gautam Kumar Shahi, University of Duisburg-Essen, Germany</li>
+                <li>Gautam Kishore Shahi, University of Duisburg-Essen, Germany</li>
                 <li>Amit Kumar Jaiswal, University of Surrey, UK</li>
                 <li>Luis-Daniel Ibáñez, University of Southampton, UK</li>
                 <li>Durgesh Nandini, University of Bayreuth, Germany</li>
