--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,32 @@
                     </tr>
                     <tr height="20px">
                       <td>
-                        <p>Institute of Informatics and Telematics of the National Research Council (IIT-CNR), Pisa, Italy </p>
+                        <p>Institute of Informatics and Telematics of the National Research Council (IIT-CNR) </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <div class="card thin1">
+              <div class="category-block">
+                <table width="80%" border="0" align="center">
+                  <tbody align="center">
+                    <tr height="200px">
+                      <td>
+                        <div class="img_wap"><img src="./res/person/rogers.jpg" alt="" class="rounded-circle"
+                            width="60%"></div>
+                      </td>
+                    </tr>
+                    <tr height="30px">
+                      <td>
+                        <h5 class="text-center"><a href="https://www.uva.nl/en/profile/r/o/r.a.rogers/r.a.rogers.html">Richard Rogers</a></h5>
+                      </td>
+                    </tr>
+                    <tr height="60px">
+                      <td>
+                        <p><br>University of Amsterdam<br><br></p>
                       </td>
                     </tr>
                   </tbody>
