--- a/index.html
+++ b/index.html
@@ -1160,6 +1160,31 @@
               </div>
             </div>
 
+            <div class="card thin1">
+              <div class="category-block">
+                <table width="80%" border="0" align="center">
+                  <tbody align="center">
+                    <tr height="200px">
+                      <td>
+                        <div class="img_wap"><img src="./res/person/ralph.jpg" alt="" class="rounded-circle"
+                            width="60%"></div>
+                      </td>
+                    </tr>
+                    <tr height="30px">
+                      <td>
+                        <h5 class="text-center"><a href="https://www.tib.eu/en/research-development/research-groups-and-labs/visual-analytics/staff/ralph-ewerth">Ralph Ewerth</a></h5>
+                      </td>
+                    </tr>
+                    <tr height="60px">
+                      <td>
+                        <p><br>Leibniz Universität Hannover<br><br></p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
            <!-- <div class="card thin1">
               <div class="category-block">
                 <table width="80%" border="0" align="center">
