--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p>Institute of Informatics and Telematics of the National Research Council (IIT-CNR) </p>
+                        <p>Institute of Informatics and Telematics of the National Research Council </p>
                       </td>
                     </tr>
                   </tbody>
@@ -1164,10 +1164,10 @@
               <div class="category-block">
                 <table width="80%" border="0" align="center">
                   <tbody align="center">
-                    <tr height="200px">
+                    <tr height="20px">
                       <td>
                         <div class="img_wap"><img src="./res/person/ralph.jpg" alt="" class="rounded-circle"
-                            width="60%"></div>
+                            width="30%"></div>
                       </td>
                     </tr>
                     <tr height="30px">
