--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
                     </tr>
                     <tr height="30px">
                       <td>
-                        <h5 class="text-center"><a href="https://stefanocresci.com">Stefano Cresci</a></h5>
+                        <h5 class="text-center"><a href="https://www.iit.cnr.it/en/stefano.cresci/">Stefano Cresci</a></h5>
                       </td>
                     </tr>
                     <tr height="60px">
