Add Program committee details

--- a/index.html
+++ b/index.html
@@ -2288,9 +2288,22 @@
           <div class="section-title">
             <h2 id="committee">Program Committee</h2>
           </div>
-            <p align="center"> TBD </p>
+            <!--<p align="center"> TBD </p>-->
         </div>
-        <div class="col-md-12 align-self-center">
+        <div class="col-12 align-self-center">
+              <ul style="margin-left: 40px">   
+                <li>Sagar Uprety, University College London</li>
+                <li>Lorenzo Cima, University of Pisa</li>
+                <li>Xiaohao Cai, University of Southampton</li>
+                <li>Julia Struß, University of Applied Sciences Potsdam</li>
+                <li>Stuart E. Middleton, University of Southampton</li>
+                <li>Daniela Godoy, ISISTAN Research Institute</li>	
+                <li>Melanie Siegel, Darmstadt University of Applied Sciences</li>
+                <li>Supriya Chanda, Indian Institute of Technology, BHU</li>
+              </ul>
+            </div>
+          </div>
+          </div>
           <!-- Section title -->
           <!--<div class="card-deck">
 
