--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
             <li>Both Qualitative and Quantitative study on harmful content</li>
             <li>Psychological effects of harmful content like mental health</li>
             <li>Approaches for data collection or data annotation using LLM on harmful content</li>
-            <li>User study on the effect of harmful content on human begins </li>
+            <li>User study on the effects of harmful content on human beings</li>
           </ul>
           <!-- <strong>
             <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2024 (AoE).
