--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,9 @@
           <br>        
           
           <b>Presentation</b>. All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
-            <br>      
+            <br>    
+          <strong>Instructions for Camera-Ready Papers</strong>: Your camera-ready submission must be formatted according to the the latest ACM SIG proceedings template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a> format. Further, the authors are required to include a proper classification for the paper according to the ACM Classification System (CCS) and Keywords. You should submit a single ZIP file containing all your source files (e.g., *.tex, *.bib, *.sty, and all figures either in Latex or .docx file for Word users).
+          <br>
           <b>Proceedings</b>. Accepted papers will be presented at the workshop and will be published in the companion (workshop) proceedings of ACM WebSci 2024.
           
           <!-- Submissions papers (.pdf format) must use the <a
