--- a/index.html
+++ b/index.html
@@ -767,8 +767,8 @@
                 <li class="nav-item"> <a class="nav-link " href="#dates">Dates</a> </li>
                 <li class="nav-item"> <a class="nav-link " href="#call">Call for Papers</a> </li>
                 <li class="nav-item"> <a class="nav-link " href="#speakers">Speakers</a> </li>
-                <!-- <li class="nav-item"> <a class="nav-link" href="#challenge">Challenge</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#sponsors">Sponsors</a> </li> -->
+                <li class="nav-item"> <a class="nav-link" href="#Timeline">Schedule</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#register">Registration</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#committee">Committee</a> </li>
               </ul>
@@ -865,10 +865,11 @@
       <div class="row">
         <div class="col-md-12">
           <div class="section-title">
-            <h2 id="Timeline">Timeline (Tentative)</h2>
+            <h2 id="Timeline">Schedule</h2>
           </div>
-          <p align="center">
-            <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
+          <p align="center"> TBD </p>
+    
+      <!--      <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
             <col width='259' style='mso-width-source:userset;width:259.25pt'>
             <col width='94' style='mso-width-source:userset;width:80.5pt'>
@@ -2226,16 +2227,20 @@
     =            Sponsors Section            =
     ===========================================-->
 
-  <!-- <section class="section">
+   <section class="section">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="section-title">
-            <h2 id="sponsors">Sponsors</h2>
+            <h2 id="register">Registration</h2>
           </div>
+          <p align="center"> Register for DHOW Workshop 2024 through the <a href="https://websci24.org/registration/registration-2">registration portal</a>.</p>
         </div>
+        </div>
+        </div>
+      </section>
 
-      </div>
+      <!--</div>
       <section class="section-sm">
         <div class="container">
           <div class="row">
