--- a/index.html
+++ b/index.html
@@ -764,9 +764,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto main-nav">
                 <li class="nav-item active"> <a class="nav-link" href="#overview">Home</a> </li>
-                <li class="nav-item"> <a class="nav-link " href="#dates">Dates</a> </li>
-                <li class="nav-item"> <a class="nav-link " href="#call">Call for Papers</a> </li>
-                <li class="nav-item"> <a class="nav-link " href="#speakers">Speakers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#dates">Dates</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#call">Call for Papers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#speakers">Speakers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#Timeline">Schedule</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#register">Registration</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
@@ -869,7 +869,7 @@
           </div>
           <p align="center"> TBD </p>
     
-      <!--      <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
+         <!-- <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
             <col width='259' style='mso-width-source:userset;width:259.25pt'>
             <col width='94' style='mso-width-source:userset;width:80.5pt'>
@@ -1016,7 +1016,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
