--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
     =            Time line            =
     ============================================-->
 
-  <section class="section bg-gray" style="display: none;">
+  <!-- <section class="section bg-gray" style="display: none;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -869,7 +869,7 @@
           </div>
           <p align="center"> TBD </p>
     
-         <!-- <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
+          <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
             <col width='259' style='mso-width-source:userset;width:259.25pt'>
             <col width='94' style='mso-width-source:userset;width:80.5pt'>
