--- a/index.html
+++ b/index.html
@@ -766,9 +766,9 @@
                 <li class="nav-item active"> <a class="nav-link" href="#overview">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#dates">Dates</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#call">Call for Papers</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#register">Registration</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#speakers">Speakers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#Timeline">Schedule</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#register">Registration</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#committee">Committee</a> </li>
               </ul>
@@ -1096,6 +1096,20 @@
     <br>
     <br>
   </section>
+
+<!-- Register -->
+  <section class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title">
+            <h2 id="register">Registration</h2>
+          </div>
+          <p align="center"> Register for DHOW Workshop 2024 through the <a href="https://websci24.org/registration/registration-2">registration portal</a>.</p>
+        </div>
+        </div>
+        </div>
+      </section>
   <!--==========================================
     =            Speakers Section            =
     ===========================================-->
@@ -2227,18 +2241,6 @@
     =            Sponsors Section            =
     ===========================================-->
 
-   <section class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="section-title">
-            <h2 id="register">Registration</h2>
-          </div>
-          <p align="center"> Register for DHOW Workshop 2024 through the <a href="https://websci24.org/registration/registration-2">registration portal</a>.</p>
-        </div>
-        </div>
-        </div>
-      </section>
 
       <!--</div>
       <section class="section-sm">
