--- a/index.html
+++ b/index.html
@@ -2309,6 +2309,8 @@
                 <li>Daniela Godoy, ISISTAN Research Institute</li>	
                 <li>Melanie Siegel, Darmstadt University of Applied Sciences</li>
                 <li>Supriya Chanda, Indian Institute of Technology, BHU</li>
+                <li>Khalid Alfatmi, Shri Vile Pare Kelavani Mandal's Institute of Technology</li>
+                <li>Simant Prakoonwit, Bournemouth University</li>
               </ul>
             </div>
           </div>
