Added accepted papers

--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,56 @@
     </div>
     <br>
     <br>
+
+    <div class="container">
+      <h2>Accepted Long Paper</h2>
+      <div class="overview">
+        <ul>
+          <li><b> The Great Ban: Efficacy and Unintended Consequences of a Massive Deplatforming Operation on Reddit </b> 
+            <br> Lorenzo Cima (University of Pisa and IIT - CNR) , Amaury Trujillo (IIT - CNR), Marco Avvenuti (University of Pisa) and Stefano Cresci (IIT - CNR)	
+          </li>
+
+          <li><b> Towards a crowdsourced framework for online hate speech moderation - a case study in the Indian political scenario </b> 
+            <br> Avigyan Bhattacharya (Jadavpur University), Tapabrata Chakrabarti (Alan Turing Institute and University College London), Subhadip Basu (Jadavpur University), Alistair Knott (Victoria University of Wellington), Dino Pedreschi (University of Pisa), Raja Chatila (Sorbonne University), Susan Leavy (University College Dublin), David Eyers (University of Otago), Paul D. Teal (Victoria University of Wellington) and Przemyslaw Biecek (Warsaw University of Technology)
+          </li>
+
+          <li><b> COVID-19 Fake News: A Systematic Literature Review using "SmartLitReview" </b> 
+            <br> Siam Sadman (University of Duisburg-Essen)	
+          </li>
+
+          <li><b> Sexism Detection on a Data Diet </b> 
+            <br> Rabiraj Bandyopadhyay (GESIS Leibniz Institute for Social Sciences), Dennis Assenmacher (GESIS Leibniz Institute for Social Sciences), Jose M. Alonso-Moral (Centro Singular de Investigación en Tecnoloxías Intelixentes, Universidade de Santiago de Compostela) and Claudia Wagner (GESIS Leibniz Institute for Social Sciences)
+          </li>
+
+          <li><b> Towards Safer Online Spaces: Deep Learning for Hate Speech Detection in Code-Mixed Social Media Conversations </b> 
+            <br> Supriya Chanda (Indian Institute of Technology (BHU)), Abhishek Dhaka (B K Birla Institute of Engineering & Technology) and Sukomal Pal (Indian Institute of Technology (BHU))
+          </li>
+
+        </ul>
+      </div>
+    </div>
+    <br>
+
+    <div class="container">
+      <h2>Accepted Short Paper</h2>
+      <div class="overview">
+        <ul>
+
+          <li><b> On the Moral Intuitions of Fake News Spreaders </b>
+            <br> Daniela Godoy (ISISTAN Research Institute, Universidad Nacional del Centro de la Provincia de Buenos Aires)
+          </li>
+
+          <li><b> What we can learn from TikTok through its Research API </b>
+            <br> Francesco Corso (Politecnico di Milano), Francesco Pierri (Politecnico di Milano) and Gianmarco De Francisci Morales (CENTAI)
+          </li>
+
+          <li><b> Understanding Influence Operations via Images </b>
+            <br> Bhanu Khetharpal (Indira Gandhi Delhi Technical University for Women), Anandita Khanooja (Indira Gandhi Delhi Technical University for Women), Abhishree Verma (Indira Gandhi Delhi Technical University for Women), Ankita (Indira Gandhi Delhi Technical University for Women) and Rishabh Kaushal (Maastricht University, Indira Gandhi Delhi Technical University for Women)
+          </li>
+      </ul>
+      </div>
+    </div>
+            
   </section>
 
 <!-- Register -->
