--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
     =            Time line            =
     ============================================-->
 
-  <!-- <section class="section bg-gray" style="display: none;">
+ <section class="section bg-gray" style="display: none;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -1016,7 +1016,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section> 
 
 
 
@@ -1255,10 +1255,6 @@
               </div>
             </div>
 
-            <<div>>
-
-              <div class="TZchLb FQ4MFe" style="background-image: url(https://drive.google.com/thumbnail?authuser=0&amp;id=1h2i1r9pt3Nqgx-fCUhkF0R1yKoqreIKWFgDERUbq_Yw&amp;sz=w1469-h711-p-k-nu);"></div>
-</div>
            <!-- <div class="card thin1">
               <div class="category-block">
                 <table width="80%" border="0" align="center">
