--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <li class="nav-item"> <a class="nav-link" href="#call">Call for Papers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#register">Registration</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#speakers">Speakers</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#Timeline">Schedule</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#Timeline">Program</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#committee">Committee</a> </li>
               </ul>
@@ -867,7 +867,7 @@
           <div class="section-title">
             <h2 id="Timeline">Schedule</h2>
           </div>
-          <p align="center"> TBD </p>
+          <!-- <p align="center"> TBD </p> -->
     
           <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
@@ -894,29 +894,29 @@
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r11'>
               <td colspan='3' height='21' class='x30'
                 style='border-right:1px solid windowtext;border-bottom:1px solid windowtext;height:16.15pt;'>
-                Session 1: AI Safety and Security</td>
+                Keynote #1 by Stefano Cresci: From Detection to Intervention: Insights into Harmful Content Diffusion and Content Moderation Practices</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r3'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited talk #1: Prof. Alex Beutel</td>
+              <td height='21' class='x27' style='height:16.15pt;'>Long Paper #1: Towards a crowdsourced framework for online hate speech moderation - a case study in the Indian political scenario</td>
               <td class='x28' x:num="0.375">9:00</td>
               <td class='x28' x:num="0.39583333333333331">9:30</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r4'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited talk #2: Prof. Bo Li</td>
+              <td height='21' class='x27' style='height:16.15pt;'>Coffee Break</td>
               <td class='x28' x:num="0.39583333333333331">9:30</td>
               <td class='x28' x:num="0.41666666666666669">10:00</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r5'>
-              <td height='21' class='x30' style='height:16.15pt;'>Contributed Talk #1</td>
+              <td height='21' class='x30' style='height:16.15pt;'>Long Paper #2: Sexism Detection on a Data Diet</td>
               <td class='x28' x:num="0.41666666666666669">10:00</td>
               <td class='x28' x:num="0.4375">10:15</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r7'>
-              <td height='21' class='x30' style='height:16.15pt;'>Coffee Break</td>
+              <td height='21' class='x30' style='height:16.15pt;'>Long Paper #3: Towards Safer Online Spaces: Deep Learning for Hate Speech Detection in Code-Mixed Social Media Conversations</td>
               <td class='x28' x:num="0.45833333333333331">10:15</td>
               <td class='x28' x:num="0.47916666666666669">10:30</td>
               <td></td>
@@ -924,89 +924,59 @@
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r11'>
               <td colspan='3' height='21' class='x30'
                 style='border-right:1px solid windowtext;border-bottom:1px solid windowtext;height:16.15pt;'>
-                Session 2: Improving Vision Model Robustness</td>
+                Long Paper #4: COVID-19 Fake News: A Systematic Literature Review using "SmartLitReview" (Virtual)</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r8'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited Talk #3: Prof. Zico Kolter</td>
+              <td height='21' class='x27' style='height:16.15pt;'>Short Paper #1: Understanding Influence Operations via Images</td>
               <td class='x28' x:num="0.47916666666666669">10:30</td>
               <td class='x28' x:num="0.52083333333333337">11:00</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r9'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited Talk #4: Prof. Chaowei Xiao</td>
+              <td height='21' class='x27' style='height:16.15pt;'>Short Paper #2: What we can learn from TikTok through its Research API</td>
               <td class='x26' x:num="0.36805555555555558">11:00</td>
               <td class='x26' x:num="0.375">11:30</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r10'>
-              <td height='21' class='x25' style='height:16.15pt;'>Contributed Talk #2</td>
+              <td height='21' class='x25' style='height:16.15pt;'>Lunch</td>
               <td class='x26' x:num="0.4375">11:30</td>
               <td class='x26' x:num="0.45833333333333331">11:45</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r101'>
-              <td height='21' class='x25' style='height:16.15pt;'>Contributed Talk #3</td>
+              <td height='21' class='x25' style='height:16.15pt;'>Keynote #2 by Ralph Ewerth: The Challenge of Multimodality in Harmful Content Detection: Analyzing Cross-modal Consistency and Multimodal Narrative Patterns</td>
               <td class='x26' x:num="0.4375">11:45</td>
               <td class='x26' x:num="0.45833333333333331">12:00</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r11'>
               <td colspan='3' height='21' class='x30'
-                style='border-right:1px solid windowtext;border-bottom:1px solid windowtext;height:16.15pt;'>Lunch
+                style='border-right:1px solid windowtext;border-bottom:1px solid windowtext;height:16.15pt;'>Long paper #5: Great Ban: Efficacy and Unintended Consequences of a Massive Deplatforming Operation on Reddit
                 (12:00-13:15)</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r11'>
               <td colspan='3' height='21' class='x30'
                 style='border-right:1px solid windowtext;border-bottom:1px solid windowtext;height:16.15pt;'>
-                Session 3: Defending Foundation Models</td>
+                Short Paper #3:On the Moral Intuitions of Fake News Spreaders</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r12'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited Talk #5: Prof. Tom Goldstein</td>
+              <td height='21' class='x27' style='height:16.15pt;'>Coffee Break</td>
               <td class='x28' x:num="0.5625">13:15</td>
               <td class='x28' x:num="0.59027777777777779">13:45</td>
               <td></td>
             </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r13'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited Talk #6: Prof. Ludwig Schmidt</td>
+              <td height='21' class='x27' style='height:16.15pt;'>Keynote #3 by Richard Rogers: Machinic critique: A history of algorithmic auditing</td>
               <td class='x28' x:num="0.59027777777777779">13:45</td>
               <td class='x28' x:num="0.60416666666666663">14:15</td>
               <td></td>
             </tr>
-            <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r14'>
-              <td height='21' class='x25' style='height:16.15pt;'>Poster Session #1</td>
-              <td class='x28' x:num="0.60416666666666663">14:15</td>
-              <td class='x28' x:num="0.625">15:15</td>
-              <td></td>
-            </tr>
-            <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r11'>
-              <td colspan='3' height='21' class='x30'
-                style='border-right:1px solid windowtext;border-bottom:1px solid windowtext;height:16.15pt;'>
-                Session 4: Attacking/Stealing Foundation Models</td>
-              <td></td>
-            </tr>
-            <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r15'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited Talk #7: Prof. Neil Gong</td>
-              <td class='x28' x:num="0.625">15:15</td>
-              <td class='x28' x:num="0.64583333333333337">15:45</td>
-              <td></td>
-            </tr>
-            <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r16'>
-              <td height='21' class='x27' style='height:16.15pt;'>Invited Talk #8: Prof. Florian Tramer</td>
-              <td class='x28' x:num="0.64583333333333337">15:45</td>
-              <td class='x28' x:num="0.66666666666666663">16:15</td>
-              <td></td>
-            </tr>
             <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r17'>
-              <td height='21' class='x25' style='height:16.15pt;'>Competition Session</td>
-              <td class='x26' x:num="0.4375">16:15</td>
-              <td class='x26' x:num="0.45833333333333331">16:45</td>
-              <td></td>
-            </tr>
-            <tr height='23' style='mso-height-source:userset;height:17.65pt' id='r17'>
-              <td height='21' class='x25' style='height:16.15pt;'>Poster Session #2</td>
+              <td height='21' class='x25' style='height:16.15pt;'>Closing</td>
               <td class='x26' x:num="0.4375">16:45</td>
               <td class='x26' x:num="0.45833333333333331">17:45</td>
               <td></td>
@@ -1016,7 +986,7 @@
         </div>
       </div>
     </div>
-  </section> 
+  </section>
 
 
 
