--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
   </section>
 
   <!--===========================================
-    =            Time line            =
+    =            Time line            = <!-- <p align="center"> TBD </p> -->
     ============================================-->
 
  <section class="section bg-gray" style="display: none;">
@@ -867,7 +867,6 @@
           <div class="section-title">
             <h2 id="Timeline">Schedule</h2>
           </div>
-          <!-- <p align="center"> TBD </p> -->
     
           <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
