--- a/index.html
+++ b/index.html
@@ -856,9 +856,9 @@
     </div>
   </section>
 
-  <!--===========================================
-    =            Time line            = <!-- <p align="center"> TBD </p> -->
-    ============================================-->
+  <!-- ===========================================
+    =            Time line            =
+    ============================================ -->
 
  <section class="section bg-gray" style="display: none;">
     <div class="container">
