--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
           <div class="section-title">
             <h2 id="Timeline">Schedule</h2>
           </div>
-    
+          <p align="center">
           <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
             <col width='259' style='mso-width-source:userset;width:259.25pt'>
